kubernetes/deploy/proxies/internal/bazarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: bazarr
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`bazarr.vandeneede.org`)
    services:
    - name: bazarr
      port: 6767
